# amr_predict

./: .gitignore  .stignore  CITATION.md  LICENSE.md  MANIFEST.org  README.md  build_editable.def  mise.toml  pyproject.org  pyproject.toml  pyrightconfig.json
.dvc/: config
config/: amr_isolation_recoding.yaml  antimicrobials_custom.yaml  ast_browser_b1.yaml  ast_browser_pred.yaml  ast_browser_qc.yaml  ena-file-download-read_run-PRJEB4681-fastq_ftp-20251004-1328.sh  genome_qc_config.yaml  jia_dataset.yaml  jia_funcscan.sh  moradigaravand_dataset.yaml  moradigaravand_funscan.sh  moradigaravand_samplesheet.csv  pair_fastqs.sh  run_bacass.sh  run_funcscan.sh
config/nf_runs/: bacass_ast.sh  moradigaravand_samplesheet_clean.csv  nextflow.config  run_funcscan.sh
config/snakemake/: ast_b1.yaml  ast_b2.yaml  ast_b3.yaml  ast_b4.yaml  ast_b5.yaml  ast_b6.yaml  ast_shared.yaml  for_seqlens.yaml
data/meta/: .gitignore  ADB_all_compounds.csv.dvc  PRJNA855368_AssemblyDetails.txt  PRJNA996347_AssemblyDetails.txt  ast_download_previews.json.dvc  biosample_attributes.tsv.dvc  biosample_mapping_2025-11-21.csv.dvc  genome2biosample.csv.dvc  jia_sample_mapping.tsv  jia_samples.tsv  jia_samples.tsv.dvc  jia_samples_reformatted.tsv  moradigaravand_samples.tsv  moradigaravand_samples.tsv.dvc  moradigaravand_samplesheet.csv  ncbi_all_samples.tsv.dvc  ncbi_all_taxon_counts.tsv.dvc  (+2 more)
docs/: view_dataset.py
scripts/: combine_datasets.py  combine_datasets.sh  combine_metadata.py  describe_dataset.R  evo2_sbatch.sh  evo_prob_pred_Gene.py  find_common_features.py  find_reference_genomes.py  format_ncbi_metadata.R  genome_qc.py  make_ast_samplesheet.R  parse_who_aware.R  run_evo2.sh  write_qc_mappings.R
snakemake/: Snakefile  compare_embeddings.smk  data_sources.yaml  download_data.smk  env.yaml  evaluate.smk  interpret.smk  models.yaml  prepare_data.smk  report.smk  shared.smk  shared.yaml
src/: make_genome_samplesheet.sh
src/R/: utils.R  (+1 more)
tests/: conftest.py  env.toml  test_cache.py  test_embedding.py  test_evaluation.py  test_evo2.py  test_genome_qc.py  test_metrics.py  test_pooling.py  test_preprocessing.py  test_seqlens.py  test_utils.py
(+73 files in other folders)
