[project]
name = "amr_predict"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy",
  "torch",
  "torchmetrics",
  "xgboost",
  "ipython",
  "polars",
  "lightning",
  "pyhere",
  "snakemake",
  "loguru",
  "transformers",
  "datasets",
  "biopython",
  "anndata",
  "fastcluster",
  "scanpy",
  "pypalettes",
  "pandas",
  "leidenalg",
  "igraph",
  "scikit-learn",
]

[tool.pyright]
venvPath = "/home/shannc/Bio_SDD/miniforge3/envs/amr_predict"
