[project]
name = "amr_predict"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy",
  "torch",
  "torchmetrics",
  "wandb",
  "dnachisel",
  "xgboost",
  "ipython",
  "pandera",
  "PAMI",
  "beartype",
  "attrs",
  "polars",
  "pytest",
  "lightning",
  "pyhere",
  "rich-cli",
  "esm",
  "loguru",
  "duckdb",
  "jaxtyping",
  "transformers",
  "plotnine",
  "fastcluster",
  "yte",
  "cattrs",
  "click",
  "datasets",
  "snakemake",
  "memray",
  "umap-learn[plot]",
  "scikit-bio",
  "anndata",
  "fastcluster",
  "scanpy",
  "pypalettes",
  "pandas",
  "leidenalg",
  "igraph",
  "scikit-learn",
]

[tool.pyright]
venvPath = "/home/shannc/Bio_SDD/miniforge3/envs/amr_predict"
